updating first homework

--- a/Excercises_1-2.ipynb
+++ b/Excercises_1-2.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -211,10 +211,7 @@
       "Digite dos valores booleanos\n",
       "1 = True \n",
       "0 = False\n",
-      "True\n",
-      "False\n",
-      "<class 'bool'>\n",
-      "<class 'bool'>\n"
+      "Ningún valor es True\n"
      ]
     }
    ],
@@ -233,6 +230,13 @@
     "else:\n",
     "    print(\"Ningún valor es True\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
