--- a/Exercise N.3.ipynb
+++ b/Exercise N.3.ipynb
@@ -80,9 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número es negativo\n"
+     ]
+    }
+   ],
    "source": [
     "num_3 = int(input(\"Digite un número: \"))\n",
     "if num_3 >0:\n",
@@ -91,6 +99,84 @@
     "    print(\"El número es negativo\")\n",
     "else:\n",
     "    print(\"El número es 0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domingo\n"
+     ]
+    }
+   ],
+   "source": [
+    "opc = int(input(\"Digite una opción (1-7): \"))\n",
+    "match opc:\n",
+    "    case 1:\n",
+    "        print(\"Lunes\")\n",
+    "    case 2:\n",
+    "        print(\"Martes\")\n",
+    "    case 3:\n",
+    "        print(\"Miércoles\")\n",
+    "    case 4:\n",
+    "        print(\"Jueves\")\n",
+    "    case 5:\n",
+    "        print(\"Viernes\")\n",
+    "    case 6:\n",
+    "        print(\"Sábado\")\n",
+    "    case 7:\n",
+    "        print(\"Domingo\")\n",
+    "    case _:\n",
+    "        print(\"Opción inválida\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es un caracter especial\n"
+     ]
+    }
+   ],
+   "source": [
+    "character = input(\"Digite un caracter: \")\n",
+    "vocales = \"aeiou\"\n",
+    "\n",
+    "if len(character) == 1:\n",
+    "    if character.lower() in vocales:  # Convierte a minúscula para comparar con \"aeiou\"\n",
+    "        print(\"Es una vocal\")\n",
+    "    elif character.isdigit():  # Verifica si es un número\n",
+    "        print(\"Es un número\")\n",
+    "    elif character.isalpha():  # Si es una letra y no es vocal, es consonante\n",
+    "        print(\"Es una consonante\")\n",
+    "    else:\n",
+    "        print(\"Es un caracter especial\")  # Todo lo demás es un caracter especial\n",
+    "else:\n",
+    "    print(\"Debe ingresar un solo caracter\")\n"
    ]
   }
  ],
