--- a/Excercises_1-2.ipynb
+++ b/Excercises_1-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "markdown"
@@ -10,7 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "# Exercise N1 "
+    "# Exercise N.1 "
    ]
   },
   {
